Colab을 통해 생성됨

--- a/10_tokenization_variousways.ipynb
+++ b/10_tokenization_variousways.ipynb
@@ -675,21 +675,51 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "#💊 **SOS**\n",
-        "- The punkt tokenizer is a pre-trained model in NLTK for sentence and word tokenization. It's commonly used for languages that don't have whitespace-separated tokens or require complex rules for punctuation.\n",
-        "\n",
-        "- When you execute nltk.download('punkt'), it downloads the punkt tokenizer data needed for tokenization tasks. This data includes language-specific rules and pre-trained models.\n",
-        "      If nltk.download('punkt') does not work out, re-downloading punkt might help in such cases.\n",
-        "\n",
-        "\n",
-        "- If NLTK or its dependencies have been updated, it might have introduced additional resources or modified the way data is accessed. It's worth checking if your NLTK version is up-to-date:\n",
-        "      !pip install --upgrade nltk"
+        "! pip install nltk\n",
+        "import nltk\n",
+        "nltk.download('punkt')"
       ],
       "metadata": {
-        "id": "bqwR_2Lb5nYx"
-      }
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OhjSOLtoZS_z",
+        "outputId": "aaf6a92f-e588-4214-b178-d1de6f33158a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.10/dist-packages (3.9.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk) (8.1.7)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk) (1.4.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk) (2024.9.11)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.66.6)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -746,6 +776,56 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install nltk\n",
+        "import nltk\n",
+        "nltk.download('punkt')\n",
+        "nltk.download('punkt_tab')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D144PX2iZfev",
+        "outputId": "b34cefd2-658b-4605-82fb-270ee1210bce"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.10/dist-packages (3.9.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from nltk) (8.1.7)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.10/dist-packages (from nltk) (1.4.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.10/dist-packages (from nltk) (2024.9.11)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from nltk) (4.66.6)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@markdown #### 🐹 **Student's Activity 1** ⤵️\n",
         "#@markdown 👀🐾 **Call <font color = 'red'> sent_tokenize() </font> function**\n",
         "\n",
@@ -763,7 +843,7 @@
       ],
       "metadata": {
         "id": "kv8s_PN-OlG_",
-        "outputId": "883128a1-fd74-42cd-e204-f64b915fdcc6",
+        "outputId": "ff8005d2-3ccc-4270-a3ac-ce3c63fa100d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -799,7 +879,7 @@
       ],
       "metadata": {
         "id": "4odDoSnPS18k",
-        "outputId": "4434bf4a-b588-4434-867a-3dc3ec70e993",
+        "outputId": "118b4c6c-9bb5-404c-c08f-840ac35ad85e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -917,6 +997,35 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/zueeon/NLP_2024"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ULGeAmOc-MX",
+        "outputId": "aa07ec63-c83f-48c1-fc53-5b2b695c5390"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'NLP_2024'...\n",
+            "remote: Enumerating objects: 96, done.\u001b[K\n",
+            "remote: Counting objects: 100% (96/96), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (92/92), done.\u001b[K\n",
+            "remote: Total 96 (delta 51), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (96/96), 126.07 KiB | 5.04 MiB/s, done.\n",
+            "Resolving deltas: 100% (51/51), done.\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### **Tokenization**\n",
@@ -936,6 +1045,17 @@
       ],
       "metadata": {
         "id": "S5pahMiG_JLH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = open('.')"
+      ],
+      "metadata": {
+        "id": "YKr8rpgQdMH9"
       },
       "execution_count": null,
       "outputs": []
