--- a/10_tokenization_variousways.ipynb
+++ b/10_tokenization_variousways.ipynb
@@ -1052,13 +1052,30 @@
     {
       "cell_type": "code",
       "source": [
-        "text = open('.')"
+        "text = open('/content/NLP_2024/Sample_ClassActivity/dorothy_wizardofoz_sample.txt','rt')"
       ],
       "metadata": {
-        "id": "YKr8rpgQdMH9"
+        "id": "YKr8rpgQdMH9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "ba1d3e8a-4460-4472-8466-6af4bfd16797"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: '/content/NLP_2024/Sample_ClassActivity/dorothy_wizardofoz_sample.txt'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-14-0c52311ca59a>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/NLP_2024/Sample_ClassActivity/dorothy_wizardofoz_sample.txt'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'rt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/NLP_2024/Sample_ClassActivity/dorothy_wizardofoz_sample.txt'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
